# RecStore

./: .gitmodules  CMakeLists.txt  recstore_config.json
dockerfiles/: init_env_inside_docker.sh
model_zoo/torchrec_dlrm/: report_uploader.py  run_single_day.sh
model_zoo/torchrec_dlrm/scripts/: process_single_day.sh
model_zoo/torchrec_dlrm/tests/: dlrm_main_single_day.py  dlrm_main_torchrec_single.py  test_cases.md  test_ebc_precision.py  test_recstore_ebc.py  test_recstore_gpu.py
src/base/: tensor.h
src/base_ps/: cache_ps_impl.h
src/framework/: CMakeLists.txt  op.cc  op.h
src/framework/gpu/: CMakeLists.txt  gpu_kv_store.cu  gpu_kv_store.h
src/framework/pytorch/: CMakeLists.txt  op_torch.cc
src/framework/pytorch/python_client/: client_test_time.py
src/framework/shm_kv_store/: CMakeLists.txt  shm_kv_store.cc  shm_kv_store.h  ucc_context.cc  ucc_context.h
src/framework/tensorflow/: CMakeLists.txt
src/grpc_ps/: CMakeLists.txt  dist_grpc_ps_client.cpp  dist_grpc_ps_client.h  dist_grpc_ps_client_test.cpp  grpc_ps_client.cpp  grpc_ps_client_test.cpp  grpc_ps_server.cpp
src/python/pytorch/recstore/: DistEmb.py  DistTensor.py  KVClient.py  optimizer.py
src/python/pytorch/recstore/unittest/: test_dist_emb_shm.py  test_dist_emb_single_gpu.py
src/python/pytorch/torchrec/: EmbeddingBag.py
src/storage/kv_engine/: base_kv.h  engine_cceh.h  engine_extendable_hash.h  engine_extendible_hash.h
src/storage/ssd/: file.h
src/test/: CMakeLists.txt  test_cceh.cpp  test_engine_cceh.cpp
